--- a/main.html
+++ b/main.html
@@ -7,6 +7,59 @@
 </head>
 
 <body>
+	<form id="my_form" method="post">
+		<div>
+			<label for="name">1.Name</label>
+			<input type="text" id="name" required>
+		</div>
+
+		<div>
+			<label for="email">2.Email</label>
+			<input type="email" id="email" required>
+		</div>
+
+		<div>
+			<label for="gender_m">3.M</label>
+			<input type="radio" name="name" id="gender" required>
+			<label for="gender">F</label>
+			<input type="radio" name="name" id="gender" required>
+		</div>
+
+		<div>
+			<label for="laptop">4.Laptop Brands</label>
+			<select name="name" id="laptop" required>
+				<option>Apple</option>
+				<option>Asus</option>
+				<option>HP</option>
+			</select>
+		</div>
+
+		<div>
+			<label for="age">5.Age</label>
+			<input type="number" id="age" min="0"required>
+		</div>
+
+		<div>
+			<label for="dob">6.DOB</label>
+			<input type="date" id="dob" required>
+		</div>
+
+		<div>
+			<label for="portfolio">Portfolio</label>
+			 <input type="url" name="portfolio" id="portfolio">
+		</div>
+
+		<div>
+			<label for="password">7.Password</label>
+			<input type="password" id="password" required>
+		</div>
+
+		<div>
+			<button type="submit">Submit</button>
+		</div>
+
+	</form>
+		
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
