--- a/main.html
+++ b/main.html
@@ -9,25 +9,25 @@
 <body>
 	<form id="my_form" method="post">
 		<div>
-			<label for="name">1.Name</label>
+			<label for="name">Name</label>
 			<input type="text" id="name" required>
 		</div>
 
 		<div>
-			<label for="email">2.Email</label>
+			<label for="email">Email</label>
 			<input type="email" id="email" required>
 		</div>
 
 		<div>
-			<label for="gender_m">3.M</label>
-			<input type="radio" name="name" id="gender" required>
+			<label for="gender_m">M</label>
+			<input type="radio" id="gender" name="name" required>
 			<label for="gender">F</label>
-			<input type="radio" name="name" id="gender" required>
+			<input type="radio" id="gender" name="name" required>
 		</div>
 
 		<div>
-			<label for="laptop">4.Laptop Brands</label>
-			<select name="name" id="laptop" required>
+			<label for="laptop">Choose your laptop brand</label>
+			<select name="laptop" id="laptop" required>
 				<option>Apple</option>
 				<option>Asus</option>
 				<option>HP</option>
@@ -35,13 +35,8 @@
 		</div>
 
 		<div>
-			<label for="age">5.Age</label>
-			<input type="number" id="age" min="0"required>
-		</div>
-
-		<div>
-			<label for="dob">6.DOB</label>
-			<input type="date" id="dob" required>
+			<label for="age">5.Age:</label>
+			<input type="number" id="age" min="0" required>
 		</div>
 
 		<div>
@@ -50,7 +45,12 @@
 		</div>
 
 		<div>
-			<label for="password">7.Password</label>
+			<label for="dob">DOB</label>
+			<input type="date" id="dob" required>
+		</div>
+
+		<div>
+			<label for="password">Password</label>
 			<input type="password" id="password" required>
 		</div>
 
